--- a/main.css
+++ b/main.css
@@ -4,14 +4,18 @@ body{
     background-color: #e0e8ff;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    background-image: url("images/pattern-background-desktop.svg");
+    background-repeat: no-repeat;
+   
 }
 .content {
     display:flex;
     justify-content: center;
     align-items: center;
+    
 }
 .card {
     background: white;
@@ -39,7 +43,7 @@ h1{
 }
 .way{
     background-color: #f5f7ff;
-    padding: 15px;
+    padding: 20px;
     border-radius: 15px;
     display: flex;
     justify-content: space-between;
